--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: cd github-actions
       - run: npm ci
+      - run: cd github-actions && npm test
       #- run: npm run build --if-present
-      - run: npm test
-
