--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,8 @@ jobs:
       - run: npm ci
       - run: npm test
       #- run: npm run build --if-present
+      - name: Deploy to GitHub Pages
+        if: success()
+        run: |
+          npm run build
+          npm run deploy
