--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,5 +33,7 @@ jobs:
         run: |
           git config --global user.email "todd.griffin61@outlook.com" 
           git config --global user.name "ample-samples"
+          pages: write
+          id-token: write
           npm run build
           npm run deploy
