--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,10 +28,12 @@ jobs:
       - run: npm ci
       - run: npm test
       #- run: npm run build --if-present
-      - name: Deploy to GitHub Pages
+      - name: Build 
         if: success()
         run: |
-          git config --global user.email "todd.griffin61@outlook.com" 
-          git config --global user.name "ample-samples"
           npm run build
-          npm run deploy
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
+         
